--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-DB_URL="mongodb+srv://job:job-password@cluster0.d2pawnh.mongodb.net/job?retryWrites=true&w=majority"
+DB_CONNECT="mongodb+srv://job:job-password@cluster0.d2pawnh.mongodb.net/job?retryWrites=true&w=majority"
+JWT_SECRET="sdflsdfslfl23432432432"
+EMAIL="saimunshezan@gmail.com"
+PASSWORD="vioygusbppzzdvco"
